[gd_scene load_steps=10 format=2]

[ext_resource path="res://Font/ka1.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://MainScreen.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 80
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 25
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=7]

[node name="MainScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0745098, 0.0941176, 0.156863, 1 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -269.0
margin_top = 87.0
margin_right = 283.0
margin_bottom = 233.0
rect_scale = Vector2( 1.0004, 1.12249 )
custom_colors/font_color = Color( 0, 1, 0.298039, 1 )
custom_fonts/font = SubResource( 1 )
text = "Hamsterr"

[node name="Label2" type="Label" parent="."]
anchor_right = 1.0
margin_top = 248.0
margin_bottom = 326.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
text = "Bob has left Feta at the hospital after she broke her leg. 
However he forgot to bring her back home and she hates the hospital. 
Help her find her way home!"
align = 1
autowrap = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -145.5
margin_bottom = 145.5
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 25

[node name="Label2" type="Label" parent="VBoxContainer"]
margin_right = 1920.0
margin_bottom = 46.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 3 )
text = "-How to play-"
align = 1

[node name="Label" type="Label" parent="VBoxContainer"]
margin_top = 71.0
margin_right = 1920.0
margin_bottom = 95.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_colors/font_color = Color( 1, 0.937255, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "Get 5 Fetas to the 5 end points. "
align = 1
autowrap = true

[node name="Label3" type="Label" parent="VBoxContainer"]
margin_top = 120.0
margin_right = 1920.0
margin_bottom = 144.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_colors/font_color = Color( 1, 0.937255, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "Use the joystick to move her and the left button to select"
align = 1
autowrap = true

[node name="Label4" type="Label" parent="VBoxContainer"]
margin_top = 169.0
margin_right = 1920.0
margin_bottom = 193.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_colors/font_color = Color( 1, 0.937255, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "Avoid the enemies"
align = 1
autowrap = true

[node name="Label5" type="Label" parent="VBoxContainer"]
margin_top = 218.0
margin_right = 1920.0
margin_bottom = 242.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_colors/font_color = Color( 1, 0.937255, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "Get the fastest time Possible"
align = 1
autowrap = true

[node name="Label6" type="Label" parent="VBoxContainer"]
margin_top = 267.0
margin_right = 1920.0
margin_bottom = 291.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "HIghScore - "
align = 1
autowrap = true

[node name="Button" type="Button" parent="."]
margin_left = 758.0
margin_top = 704.0
margin_right = 916.0
margin_bottom = 776.0
custom_colors/font_color_focus = Color( 0, 1, 0.298039, 1 )
custom_colors/font_color = Color( 0, 1, 0.298039, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 5 )
custom_styles/pressed = SubResource( 8 )
custom_styles/normal = SubResource( 7 )
text = "Play"

[node name="Button2" type="Button" parent="."]
margin_left = 995.0
margin_top = 703.0
margin_right = 1153.0
margin_bottom = 775.0
custom_colors/font_color_focus = Color( 0, 1, 0.298039, 1 )
custom_colors/font_color = Color( 0, 1, 0.298039, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 5 )
custom_styles/normal = SubResource( 7 )
text = "Quit"

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
